force-app/main/default/objects/InvoiceLine__c/InvoiceLine__c.object-meta.xml
<CustomObject>
    <description>A line item on an invoice. Master-detail child of Invoice; its amounts roll up to the invoice total.</description>
    <label>Invoice Line</label>
    <nameField>
        <displayFormat>IL-{0000000000}</displayFormat>
        <label>Invoice Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>