force-app/main/default/objects/InvoiceLine__c/fields/Billing_Event__c.field-meta.xml
<CustomField>
    <fullName>Billing_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Billing event this line was generated from.</description>
    <label>Billing Event</label>
    <referenceTo>BillingEvent__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>